platform spelling mistake

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -232,7 +232,7 @@
                             <input type="text" name="ig_handle" id="instagram" placeholder="Intagram Handle" class="input-border-bottom border-white-light">
                             <div class="select-style medium-select border-white-light">
                               <select name="platform" id="platform-select" class="bg-transparent no-margin-bottom" required>
-                                <option value="0">-- preferred paltform --</option>
+                                <option value="0">-- preferred platform --</option>
                                 <option value="1">iOS</option>
                                 <option value="2">Android</option>
                                 <option value="3">Desktop/Laptop</option>
