bottom logo src fix

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -257,7 +257,7 @@
                     <!-- start logo -->
                     <div class="col-md-4 col-sm-2 col-xs-12 text-center display-table xs-margin-10px-bottom">
                         <div class="display-table-cell vertical-align-middle">
-                            <a href="index.html"><img class="footer-logo" src="images/logo-full-white.png" data-at2x="images/logo-full-white@2x.png" alt=""></a>
+                            <img id="footer-logo" src="https://s3.us-east-2.amazonaws.com/bundle-homepage/bundle+logo+thin+bezel+white.png" alt="">
                         </div>
                     </div>
                     <!-- end logo -->
