Add 3rd value prop - integrate a trip planner

--- a/frontend/index3.html
+++ b/frontend/index3.html
@@ -65,7 +65,7 @@
                         <div class="slider-text-middle">
                             <div class="col-lg-7 col-md-10 col-sm-10 center-col text-center">
                                 <span class="after-before-separator text-extra-small alt-font text-white letter-spacing-3 xs-letter-spacing-0 text-uppercase margin-20px-bottom xs-margin-5px-bottom display-inline-block">Beta Launch is Coming Soon</span>
-                                <h3 class="font-weight-500 text-white alt-font margin-40px-bottom xs-margin-25px-bottom">Always have a place to shoot.</h3>
+                                <h3 class="font-weight-500 text-white alt-font margin-40px-bottom xs-margin-25px-bottom">Turn inspirations directly into trips.</h3>
                                 <a href="#contact-section" class="inner-link btn btn-transparent-white btn-rounded btn-medium text-link-white">Join Our Beta</a>
                             </div>
                         </div>
