Edit submission forms to indicate value prop

--- a/frontend/index3.html
+++ b/frontend/index3.html
@@ -223,7 +223,7 @@
                         <div class="text-extra-small letter-spacing-3 alt-font text-white text-uppercase margin-70px-bottom sm-margin-50px-bottom xs-margin-30px-bottom display-inline-block">Sign up for our beta and we'll be in touch soon!</div>
                     </div>
                 </div>
-                <form id="signup-form" action="javascript:submitForm()" method="post">
+                <form id="signup-form" action="javascript:submitForm(3)" method="post">
                     <div class="row">
                         <div class="col-md-8 center-col input-border-white text-center">
                             <div id="success-contact-form" class="no-margin-lr"></div>
