Add translucent background

--- a/frontend/index1.html
+++ b/frontend/index1.html
@@ -58,7 +58,7 @@
         </header>
         <!-- end header -->
         <!-- start hero section -->
-        <section class="wow fadeIn no-padding cover-background color-code" data-color="1">
+        <section class="wow fadeIn no-padding cover-background color-code" data-color="1"  style="background-image: url('images/backgroundccv1.png'); visibility: visible; animation-name: fadeIn;">
             <div class="container full-screen position-relative">
                 <div class="slider-typography text-left">
                     <div class="slider-text-middle-main">
