Fix spelling mistakes

--- a/frontend/index1.html
+++ b/frontend/index1.html
@@ -229,10 +229,10 @@
                             <div id="success-contact-form" class="no-margin-lr"></div>
                             <input type="text" name="name" id="name" placeholder="Name *" class="input-border-bottom border-white-light" required>
                             <input type="email" name="email" id="email" placeholder="E-mail *" class="input-border-bottom border-white-light" required>
-                            <input type="text" name="ig_handle" id="instagram" placeholder="Intagram Handle" class="input-border-bottom border-white-light">
+                            <input type="text" name="ig_handle" id="instagram" placeholder="Instagram Handle" class="input-border-bottom border-white-light">
                             <div class="select-style medium-select border-white-light">
                               <select name="platform" id="platform-select" class="bg-transparent no-margin-bottom" required>
-                                <option value="0">-- preferred platform --</option>
+                                <option value="0">-- Preferred Platform --</option>
                                 <option value="1">iOS</option>
                                 <option value="2">Android</option>
                                 <option value="3">Desktop/Laptop</option>
