--- a/frontend/index2.html
+++ b/frontend/index2.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
     <head>
         <!-- title -->
-        <title>Bundle | Beautiful images and their locations.</title>
+        <title>Bundle | Deals for influencers.</title>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1" />
