--- a/frontend/index2.html
+++ b/frontend/index2.html
@@ -42,6 +42,25 @@
             <script src="js/html5shiv.js"></script>
         <![endif]-->
         <link rel="stylesheet" href="custom/style.css" />
+
+        <!-- Facebook Pixel Code -->
+        <script>
+          !function(f,b,e,v,n,t,s)
+          {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+          n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+          if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+          n.queue=[];t=b.createElement(e);t.async=!0;
+          t.src=v;s=b.getElementsByTagName(e)[0];
+          s.parentNode.insertBefore(t,s)}(window, document,'script',
+          'https://connect.facebook.net/en_US/fbevents.js');
+          fbq('init', '1825684530987316');
+          fbq('track', 'PageView');
+        </script>
+        <noscript><img height="1" width="1" style="display:none"
+          src="https://www.facebook.com/tr?id=1825684530987316&ev=PageView&noscript=1"
+        /></noscript>
+        <!-- End Facebook Pixel Code -->
+
     </head>
     <body class="bg-background-fade">
         <!-- start header -->
@@ -272,7 +291,6 @@
         <sciprt>
           var value_prop_id = 2;
         </script>
-         <img height="1" width="1" src="https://www.facebook.com/tr?id=1825684530987316&ev=PageView"/>
         <!-- End Facebook Pixel Code -->
         <!-- javascript libraries -->
         <script type="text/javascript" src="js/jquery.js"></script>
