Add google analytics

--- a/frontend/index1.html
+++ b/frontend/index1.html
@@ -60,6 +60,17 @@
           src="https://www.facebook.com/tr?id=1825684530987316&ev=PageView&noscript=1"
         /></noscript>
         <!-- End Facebook Pixel Code -->
+        
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-103968839-2"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-103968839-2');
+        </script>
+
     </head>
     <body class="bg-background-fade">
         <!-- start header -->
