--- a/frontend/index2.html
+++ b/frontend/index2.html
@@ -61,6 +61,16 @@
         /></noscript>
         <!-- End Facebook Pixel Code -->
 
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-103968839-3"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-103968839-3');
+        </script>
+
     </head>
     <body class="bg-background-fade">
         <!-- start header -->
