Fix code snippet at bottom

--- a/frontend/index1.html
+++ b/frontend/index1.html
@@ -60,7 +60,7 @@
           src="https://www.facebook.com/tr?id=1825684530987316&ev=PageView&noscript=1"
         /></noscript>
         <!-- End Facebook Pixel Code -->
-        
+
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-103968839-2"></script>
         <script>
@@ -298,7 +298,7 @@
         <a class="scroll-top-arrow" href="javascript:void(0);"><i class="ti-arrow-up"></i></a>
         <!-- end scroll to top  -->
         <!-- Facebook Pixel Code -->
-        <sciprt>
+        <script>
           var value_prop_id = 1;
         </script>
         <!-- End Facebook Pixel Code -->
