--- a/frontend/index2.html
+++ b/frontend/index2.html
@@ -298,8 +298,8 @@
         <a class="scroll-top-arrow" href="javascript:void(0);"><i class="ti-arrow-up"></i></a>
         <!-- end scroll to top  -->
         <!-- Facebook Pixel Code -->
-        <sciprt>
-          var value_prop_id = 2;
+        <script>
+          var value_prop_id = 1;
         </script>
         <!-- End Facebook Pixel Code -->
         <!-- javascript libraries -->
