--- a/frontend/index3.html
+++ b/frontend/index3.html
@@ -299,8 +299,8 @@
         <!-- end scroll to top  -->
 
         <!-- Facebook Pixel Code -->
-        <sciprt>
-          var value_prop_id = 3;
+        <script>
+          var value_prop_id = 1;
         </script>
         <!-- End Facebook Pixel Code -->
         <!-- javascript libraries -->
