--- a/frontend/index1.html
+++ b/frontend/index1.html
@@ -97,7 +97,7 @@
                                 <h4 class="font-weight-500 text-white alt-font margin-40px-bottom xs-margin-25px-bottom">Stop losing track of the best photo ops!</h4>
                                 <h6 class="font-weight-500 text-white alt-font margin-40px-bottom xs-margin-25px-bottom">Save inspirations to Bundle's map and keep track of everytihng in one place.</h6>
 
-                                <form id="signup-form" action="javascript:submitEmail(1)" method="post">
+                                <form id="email-signup-form" action="javascript:submitEmail(1)" method="post">
                                     <div class="row">
                                         <div class="col-md-8 center-col input-border-white text-center">
                                             <div id="success-contact-form" class="no-margin-lr"></div>
