--- a/frontend/index2.html
+++ b/frontend/index2.html
@@ -96,7 +96,7 @@
                                 <span class="after-before-separator text-extra-small alt-font text-white letter-spacing-3 xs-letter-spacing-0 text-uppercase margin-20px-bottom xs-margin-5px-bottom display-inline-block">Launching Soon</span>
                                 <h3 class="font-weight-500 text-white alt-font margin-40px-bottom xs-margin-25px-bottom">Get free stuff. Get paid.</h3>
                                 <h6 class="font-weight-500 text-white alt-font margin-40px-bottom xs-margin-25px-bottom">Got over 1k followers? Bundle connects you with local businesses offering deals for influencers.</h6>
-                                <form id="signup-form" action="javascript:submitEmail(1)" method="post">
+                                <form id="email-signup-form" action="javascript:submitEmail(1)" method="post">
                                     <div class="row">
                                         <div class="col-md-8 center-col input-border-white text-center">
                                             <div id="success-contact-form" class="no-margin-lr"></div>
