--- a/frontend/index2.html
+++ b/frontend/index2.html
@@ -94,8 +94,8 @@
                         <div class="slider-text-middle">
                             <div class="col-lg-10 col-md-10 col-sm-10 center-col text-center">
                                 <span class="after-before-separator text-extra-small alt-font text-white letter-spacing-3 xs-letter-spacing-0 text-uppercase margin-20px-bottom xs-margin-5px-bottom display-inline-block">Launching Soon</span>
-                                <h3 class="font-weight-500 text-white alt-font margin-40px-bottom xs-margin-25px-bottom">Get free stuff. Get paid.</h3>
-                                <h6 class="font-weight-500 text-white alt-font margin-40px-bottom xs-margin-25px-bottom">Got over 1k followers? Bundle connects you with local businesses offering deals for influencers.</h6>
+                                <h3 class="font-weight-500 text-white alt-font margin-40px-bottom xs-margin-25px-bottom">Got over 1k followers?</h3>
+                                <h6 class="font-weight-500 text-white alt-font margin-40px-bottom xs-margin-25px-bottom">Bundle connects you with local businesses offering deals for influencers.</h6>
                                 <form id="email-signup-form" action="javascript:submitEmail(1)" method="post">
                                     <div class="row">
                                         <div class="col-md-8 center-col input-border-white text-center">
@@ -241,37 +241,6 @@
             </div>
         </section>
         <!-- end client logo section -->
-        <!-- start contact section -->
-        <section id="contact-section" class="wow fadeIn animated color-code md-no-background-img" data-color="6">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-9 col-sm-10 col-xs-12 center-col text-center wow fadeIn">
-                        <div class="text-extra-small letter-spacing-3 alt-font text-white text-uppercase margin-70px-bottom sm-margin-50px-bottom xs-margin-30px-bottom display-inline-block">Sign up for our beta and we'll be in touch soon!</div>
-                    </div>
-                </div>
-                <form id="signup-form" action="javascript:submitForm(3)" method="post">
-                    <div class="row">
-                        <div class="col-md-8 center-col input-border-white text-center">
-                            <div id="success-contact-form" class="no-margin-lr"></div>
-                            <input type="text" name="name" id="name" placeholder="Name *" class="input-border-bottom border-white-light" required>
-                            <input type="email" name="email" id="email" placeholder="E-mail *" class="input-border-bottom border-white-light" required>
-                            <input type="text" name="ig_handle" id="instagram" placeholder="Instagram Handle" class="input-border-bottom border-white-light">
-                            <div class="select-style medium-select border-white-light">
-                              <select name="platform" id="platform-select" class="bg-transparent no-margin-bottom" required>
-                                <option value="0">-- Preferred Platform --</option>
-                                <option value="1">iOS</option>
-                                <option value="2">Android</option>
-                                <option value="3">Desktop/Laptop</option>
-                              </select>
-                            </div>
-                            <br>
-                            <button id="submit-button" type="submit" class="btn btn-very-small btn-transparent-white btn-rounded xs-margin-15px-top">Get early access</button>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </section>
-        <!-- end contact section -->
         <!-- start footer -->
         <footer class="footer-center-logo padding-five-tb xs-padding-30px-tb">
             <div class="container">
