--- a/frontend/index1.html
+++ b/frontend/index1.html
@@ -102,6 +102,7 @@
                                         <div class="col-md-8 center-col input-border-white text-center">
                                             <div id="success-contact-form" class="no-margin-lr"></div>
                                             <input type="email" name="email" id="email" placeholder="E-mail *" class="input-border-bottom border-white-light" required>
+                                            <p id='privacy-statement'>We respect your <span><a href='privacy'>privacy</a></span> and will not sell your information, not even to the highest bidder.</p>
                                             <button id="submit-button" type="submit" class="btn btn-medium btn-transparent-white btn-rounded xs-margin-15px-top">Get early access</button>
                                         </div>
                                     </div>
