--- a/frontend/index1.html
+++ b/frontend/index1.html
@@ -95,7 +95,7 @@
                             <div class="col-lg-10 col-md-10 col-sm-10 center-col text-center">
                                 <span class="after-before-separator text-extra-small alt-font text-white letter-spacing-3 xs-letter-spacing-0 text-uppercase margin-20px-bottom xs-margin-5px-bottom display-inline-block">Launching soon</span>
                                 <h4 class="font-weight-500 text-white alt-font margin-40px-bottom xs-margin-25px-bottom">Stop losing track of the best photo opportunities!</h4>
-                                <h6 class="font-weight-500 text-white alt-font margin-40px-bottom xs-margin-25px-bottom">Save inspirations to Bundle's map and keep track of everytihng in one place.</h6>
+                                <h6 class="font-weight-500 text-white alt-font margin-40px-bottom xs-margin-25px-bottom">Save inspirations to Bundle's map and keep track of everything in one place.</h6>
 
                                 <form id="email-signup-form" action="javascript:submitEmail(1)" method="post">
                                     <div class="row">
